# microservice-starter-fastapi

./: .dockerignore  .env-docker-template  .env-taskfile-template  .env-template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  copier.yml  docker-compose.yml  github-actions.yml  pyproject.toml  werf-giterminism.yaml  werf.yaml
.docs/: auth.md  clickhouse.md  development.md  github.md  gitlab.md  http.md  local_setup.md  observability.md  postgres.md
.helm/: Chart.yaml
.helm/production/: secret-values.yaml  values.yaml
.helm/staging/: secret-values.yaml  values.yaml
.helm/templates/: faststream-inbox.yml  migrations.yml
.taskfiles/ci/: Taskfile.yml
.taskfiles/db/: Taskfile.yml
.taskfiles/docker/: Taskfile.yml
.taskfiles/dramatiq/: Taskfile.yml
.taskfiles/faststream/: Taskfile.yml
.taskfiles/http/: Taskfile.yml
.taskfiles/lint/: Taskfile.yml
.taskfiles/python/: Taskfile.yml
.taskfiles/setup/: Taskfile.yml
.taskfiles/tests/: Taskfile.yml
.taskfiles/werf/: Taskfile.yml
_copier_hooks/: post_gen.py
backend/app/: conftest.py  deps-policy.toml  deps-py-config.toml  logging_conf.py  main.py  main_stream.py  shell.py  uvicorn_dev.py  uvicorn_prod.py
backend/app/controllers/: deps-policy.toml  healthcheck.py  metrics.py
backend/app/controllers/auth/: api_gateway_jwt.py
backend/app/core/: config.py  container.py  deps-policy.toml
backend/app/dal/: deps-policy.toml  interfaces.py
backend/app/dal/models/: __init__.py
backend/app/domain/: deps-policy.toml
backend/app/infra/: clickhouse_client.py  deps-policy.toml  http_client.py  redis.py
backend/app/management/commands/: faststream_inbox_cleanup.py
backend/app/services/: deps-policy.toml  exceptions.py
backend/app/tests/fixtures/: __init__.py  config.py  container.py  db.py  fastapi.py
backend/app/utils/: datetimes.py
backend/migrations/: check_migrations.py  env.py
openapi/: healthcheck.json  metrics.json  v1.json
